--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "cd videocallapp && npm run build",
     "install-client": "cd videocallapp && npm install",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install-client && npm run build",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run install-client && npm run build",
     "start": "node server.js",
     "client": "cd videocallapp && npm start",
     "dev": "concurrently \"npm run start\" \"npm run client\""
